fixed projects alignment.

--- a/css/projects.less
+++ b/css/projects.less
@@ -16,19 +16,22 @@
 .project-container {
   width:100%;
   list-style: none;
-  display: inline;
+  display: inline-block;
+  vertical-align: top;
 }
 
 .project-anchor{
-  height: 100%;
+  height: 80%;
   width: 100%;
 }
 
 .project-image{
+  height: 80%;
   width: 100%;
 }
 
 .project-description{
+  height: 20%;
   width: 100%;
   text-align: center;
   padding: @project-padding @project-padding;
